--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -233,7 +233,7 @@
         "menubarPanelLabel"                                : "Menubar",
         "cpTitle7_title"                                   : "Apply Title 7",
         "core_preferences_panels_plugins_label"            : "Preferences Panel: Plugins",
-        "emptySharedPasteboard"                            : "Empty",
+        "empty"											   : "Empty",
         "import"                                           : "Import",
         "cpChangeBackupInterval_title"                     : "Change Backup Interval",
         "sendBugReport"                                    : "Send Bug Report",
@@ -403,7 +403,7 @@
         "finalcutpro_notifications_manager_label"          : "Manager: Notifications",
         "cpToggleVoiceCommands_title"                      : "Toggle Voice Commands",
         "continue"                                         : "Continue",
-        "watchFolderFCPMediaHelp"                          : "This feature allows you to recieve macOS notfications whenever supported files are added into any of the below watch folders. From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline. If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
+        "watchFolderFCPMediaHelp"                          : "This feature allows you to recieve macOS notfications whenever supported files are added into any of the below watch folders.<br />From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline.<br />If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
         "midiTopDeviceToAll"                               : "This will apply the MIDI device on the top of the list to all the subsequent lines for the current application.",
         "shareDetails_Facebook"                            : "Type: Facebook\nLogin: %{login}\nTitle: %{title}",
         "cpMoveAndResizeCornerSouthEast_title"             : "Move & Resize Focussed Window: Bottom Right Corner",
@@ -542,7 +542,6 @@
         "cpMakeSelectedTextUppercase_title"                : "Make Selected Text Uppercase",
         "blue"                                             : "Blue",
         "newFileForFinalCutPro"                            : "New Media for Final Cut Pro",
-        "emptyPasteboardHistory"                           : "Empty",
         "cpToggleColorBoard_title"                         : "Toggle Color Board Panel",
         "cpAudioEffect7_title"                             : "Apply Audio Effect 7",
         "noteOn"                                           : "Note On",
@@ -892,7 +891,7 @@
         "activatorShowHidden"                                  : "Show Hidden",
         "hacksShortcutsEditorText"                             : "Please use the Final Cut Pro <strong>Command Editor</strong> to edit these shortcuts.<br />\n                                                        <br />\n                                                        This feature can be disabled by unchecking the <strong>Control CommandPost Shortcuts within Final Cut Pro</strong><br/>\n                                                        option in the Final Cut Pro tab.\n                                                        ",
         "pushoverServerFailed"                                 : "Could not communicate with the Pushover server.",
-        "watchFolderXMLHelp"                                   : "This feature allows you to recieve macOS notfications whenever a FCPXML file is added into any of the below watch folders. From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline. If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
+        "watchFolderXMLHelp"                                   : "This feature allows you to recieve macOS notfications whenever a FCPXML file is added into any of the below watch folders.<br />From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline.<br />If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
         "performBatchExport"                                   : "Perform Batch Export",
         "monitor"                                              : "Monitor",
         "preferences"                                          : "Preferences",
@@ -1149,6 +1148,11 @@
         "finalcutpro_console_font_label"                       : "Console: Font",
         "finalcutpro_fullscreen_dockicon_label"                : "Full Screen Dock Icon Manager",
         "disableAllOverlays"                                   : "Disable All Overlays",
-        "cpToggleAllViewerOverlays_title"                      : "Toggle All Viewer Overlays"
+        "cpToggleAllViewerOverlays_title"                      : "Toggle All Viewer Overlays",
+        "folder"											   : "Folder",
+        "tag"										           : "Tag",
+        "audio"												   : "Audio",
+        "stills"										       : "Stills",
+        "watchFolderAddFinderTag"						       : "If you want to add a Finder Tag to any %{type} Files that are added to this Watch Folder please enter it below, or press OK to skip:",
     }
 }
