--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -14,8 +14,6 @@
     	"goToEnd"                                           : "Go to End",
     	"goToRangeStart"                                    : "Go to Range Start",
     	"goToRangeEnd"                                      : "Go to Range End",
-    	"goToNextFrame"                                     : "Go to Next Frame",
-    	"goToPreviousFrame"                                 : "Go to Previous Frame",
     	"playback"                                          : "Playback",
     	"finalcutpro_midi_controls_controlui_absolute_label": "MIDI Controls: Control FCP UI (Absolute)",
     	"finalcutpro_midi_controls_controlui_relative_label": "MIDI Controls: Control FCP UI (Relative)",
@@ -1154,5 +1152,26 @@
         "audio"												   : "Audio",
         "stills"										       : "Stills",
         "watchFolderAddFinderTag"						       : "If you want to add a Finder Tag to any %{type} Files that are added to this Watch Folder please enter it below, or press OK to skip:",
+        "trim"												   : "Trim",
+        "blade"											       : "Blade",
+        "joinClips"										       : "Join Clips",
+        "start"												   : "Start",
+        "end"												   : "End",
+        "trimToPlayhead"								       : "Trim To Playhead",
+        "extendEdit"										   : "Extend Edit",
+        "alignAudioToVideo"							           : "Align Audio to Video",
+        "nudge"												   : "Nudge",
+        "left"												   : "Left",
+        "right"												   : "Right",
+		"reverse"											   : "Reverse",
+		"goTo"								                   : "Go to",
+		"edit"										           : "Edit",
+		"frame"												   : "Frame",
+		"marker"											   : "Marker",
+		"keyframe"										       : "Keyframe",
+		"resetAllControls"									   : "Reset All Controls",
+		"resetCurrentEffectPane"							   : "Reset Current Effect Pane",
+		"resetSelectedControl"    						       : "Reset Selected Control",
+		"pause"	 											   : "Pause",
     }
 }
