--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1173,5 +1173,29 @@
 		"resetCurrentEffectPane"							   : "Reset Current Effect Pane",
 		"resetSelectedControl"    						       : "Reset Selected Control",
 		"pause"	 											   : "Pause",
+		"zoomToFit"										       : "Zoom to Fit",
+		"zoomToSamples"										   : "Zoom to Samples",
+		"timelineHistory"									   : "Timeline History",
+		"back"									 			   : "Back",
+		"forward"											   : "Forward",
+		"histogram"								               : "Histogram",
+		"vectorscope"									       : "Vectorscope",
+		"videoWaveform"									       : "Video Waveform",
+		"toggleVideoScopesInViewer"							   : "Toggle Video Scopes in Viewer",
+		"toggleVideoScopesInEventViewer"				       : "Toggle Video Scopes in Event Viewer",
+		"undo"												   : "Undo",
+		"redo"											       : "Redo",
+		"delete"										       : "Delete",
+		"breakApartClipItems"                                  : "Break Apart Clip Items",
+		"detachAudio"										   : "Detach Audio",
+		"components"								           : "Components",
+		"expandAudio"										   : "Expand Audio",
+		"selectLeftAudioEdge"								   : "Select Left Audio Edge",
+		"selectRightAudioEdge"	 							   : "Select Right Audio Edge",
+		"selectLeftEdge"					                   : "Select Left Edge",
+		"selectRightEdge"					                   : "Select Right Edge",
+		"clip"										           : "Clip",
+		"new" 									               : "New",
+		"compoundClip"										   : "Compound Clip",
     }
 }
