--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1197,5 +1197,6 @@
 		"clip"										           : "Clip",
 		"new" 									               : "New",
 		"compoundClip"										   : "Compound Clip",
+		"viewerOverlay"										   : "Viewer Overlay",
     }
 }
