--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1063,9 +1063,14 @@
         "core_tangent_os_display_label"                        : "Tangent: macOS Display Controls",
         "core_tangent_os_sound_label"                          : "Tangent: macOS Sound Controls",
         "core_tangent_prefs_label"                             : "Tangent: Preferences",
-        "finalcutpro_tangent_color_label"                      : "Tangent: FCPX Color Inspector Controls",
-        "finalcutpro_tangent_group_label"                      : "Tangent: FCPX Support",
-        "finalcutpro_tangent_timeline_label"                   : "Tangent: FCPX Timeline Controls",
+        "finalcutpro_tangent_color_label"                      : "Tangent: Final Cut Pro Color Inspector Controls",
+        "finalcutpro_tangent_group_label"                      : "Tangent: Final Cut Pro Support",
+        "finalcutpro_tangent_timeline_label"                   : "Tangent: Final Cut Pro Timeline Controls",
+        "finalcutpro_tangent_clip_label"				       : "Tangent: Final Cut Pro Clip Controls",
+        "finalcutpro_tangent_edit_label"				       : "Tangent: Final Cut Pro Edit Controls",
+        "finalcutpro_tangent_new_label"				       	   : "Tangent: Final Cut Pro New Controls",
+        "finalcutpro_tangent_trim_label"				       : "Tangent: Final Cut Pro Trim Controls",
+        "finalcutpro_tangent_view_label"				       : "Tangent: Final Cut Pro View Controls",
         "video"                                                : "Video",
         "addColorBoardEffect"                                  : "Add Color Board Effect",
         "addColorWheelsEffect"                                 : "Add Color Wheels Effect",
@@ -1091,7 +1096,7 @@
         "onlyOneBrowserClipMustBeSelected"                     : "Only one clip can be selected in the browser to use this feature.",
         "pasteboardToMarkersCompleted"                         : "Copying Pasteboard Markers to Selected Clip in Browser has completed successfully.",
         "finalcutpro_browser_pasteboardtomarkers_label"        : "Browser: Pasteboard Markers to Clip",
-        "finalcutpro_bugfix_clipselection_label"               : "Bugfix: FCPX 10.4.1 Rogue Clip Selection",
+        "finalcutpro_bugfix_clipselection_label"               : "Bugfix: Final Cut Pro 10.4.1 Rogue Clip Selection",
         "cpResetMasterColorWheelColor_title"                   : "Reset Master Color Wheel Color",
         "cpResetMasterColorWheelSaturation_title"              : "Reset Master Color Wheel Saturation",
         "cpResetMasterColorWheelBrightness_title"              : "Reset Master Color Wheel Brightness",
