Issue #1310 - Added Action to Type Pasteboard Contents
- Added action to “type” the pasteboard contents
- Closes #1310

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -393,6 +393,7 @@
         "cpTransition8_title": "Apply Transition 8",
         "cpTransition9_title": "Apply Transition 9",
         "cpTrashPreferences_title": "Trash Preferences",
+        "cpTypeClipboardContents_title": "Type Pasteboard Contents",
         "cpUserGuide_title": "User Guide",
         "cpVideoEffect1_title": "Apply Video Effect 1",
         "cpVideoEffect2_title": "Apply Video Effect 2",
