Issue #1308 - Updated Tangent Mappings
- Fixed typo in `plugins.finalcutpro.tangent.overlay`
- Added action for "Switch Between Inside/Outside Masks"
- Updated Tangent Mappings
- Closes #1308

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1084,6 +1084,7 @@
         "suggestATranslation": "Suggest A New Language",
         "suggestFeatureToApple": "Suggest Final Cut Pro Feature to Apple",
         "support": "Support",
+        "switchBetweenInsideOutsideMarks": "Switch Between Inside/Outside Masks",
         "switchingTo": "Switching to",
         "tag": "Tag",
         "tangentFinalCutProShortcutFailed": "There is no shortcut key applied to this command, so the command cannot be triggered.\n\nPlease open up the Final Cut Pro Command Editor and assign a shortcut key to the command, then try again.",
