--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -89,8 +89,8 @@
         "brightness10": "BRIGHTNESS",
         "brightness4": "BRI",
         "brightness9": "BRGHTNESS",
-        "browser": "Browser",
         "browser_group": "Browser",
+        "browser": "Browser",
         "bugReport": "Bug Report",
         "button": "Button",
         "buttonLabel": "Button Label",
@@ -975,7 +975,10 @@
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
+        "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProDone": "Final Cut Pro was scanned successfully.",
+        "scanFinalCutProSetupOne": "CommandPost needs to scan Final Cut Pro for Plugins, Motion Templates and Fonts.",
+        "scanFinalCutProSetupTwo": "Depending on how many things you have installed, this can take several minutes.",
         "scanFinalCutProWarning": "Depending on how many Effects, Transitions, Generators, and Titles you have installed this might take quite a few seconds.\n\nPlease do not use your mouse or keyboard until you're notified that this process is complete.",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
@@ -1070,6 +1073,7 @@
         "spacing": "Spacing",
         "spanish": "Spanish",
         "start": "Start",
+        "startScan": "Start Scan",
         "stillFrames": "Still Frames",
         "stills": "Stills",
         "streamDeck": "Stream Deck",
