#1282 * Updated fcp watchfolders media classes * Added `cp.collect.Queue` * Other fixes

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -137,8 +137,8 @@
             "other": "Enable Background Render (%{count} secs)"
         },
         "second"											: {
-        	"one":	"Second",
-        	"other": "Seconds",
+        	"one"  : "Second",
+        	"other": "Seconds"
         },
         "cpZoomToSelection_title"              : "Zoom to Selection",
         "midiResetAllConfirmation"             : "This will reset all MIDI items across all applications to the default values.",
@@ -229,7 +229,7 @@
         "menubarPanelLabel"                                : "Menubar",
         "cpTitle7_title"                                   : "Apply Title 7",
         "core_preferences_panels_plugins_label"            : "Preferences Panel: Plugins",
-        "empty"											   : "Empty",
+        "empty"                                            : "Empty",
         "import"                                           : "Import",
         "cpChangeBackupInterval_title"                     : "Change Backup Interval",
         "sendBugReport"                                    : "Send Bug Report",
@@ -537,7 +537,6 @@
         "finalcutpro_timeline_videoeffects_label"          : "Timeline: Video Effects",
         "cpMakeSelectedTextUppercase_title"                : "Make Selected Text Uppercase",
         "blue"                                             : "Blue",
-        "newFileForFinalCutPro"                            : "New Media for Final Cut Pro",
         "cpToggleColorBoard_title"                         : "Toggle Color Board Panel",
         "cpAudioEffect7_title"                             : "Apply Audio Effect 7",
         "noteOn"                                           : "Note On",
@@ -1064,11 +1063,11 @@
         "finalcutpro_tangent_color_label"                      : "Tangent: Final Cut Pro Color Inspector Controls",
         "finalcutpro_tangent_group_label"                      : "Tangent: Final Cut Pro Support",
         "finalcutpro_tangent_timeline_label"                   : "Tangent: Final Cut Pro Timeline Controls",
-        "finalcutpro_tangent_clip_label"				       : "Tangent: Final Cut Pro Clip Controls",
-        "finalcutpro_tangent_edit_label"				       : "Tangent: Final Cut Pro Edit Controls",
-        "finalcutpro_tangent_new_label"				       	   : "Tangent: Final Cut Pro New Controls",
-        "finalcutpro_tangent_trim_label"				       : "Tangent: Final Cut Pro Trim Controls",
-        "finalcutpro_tangent_view_label"				       : "Tangent: Final Cut Pro View Controls",
+        "finalcutpro_tangent_clip_label"                       : "Tangent: Final Cut Pro Clip Controls",
+        "finalcutpro_tangent_edit_label"                       : "Tangent: Final Cut Pro Edit Controls",
+        "finalcutpro_tangent_new_label"                        : "Tangent: Final Cut Pro New Controls",
+        "finalcutpro_tangent_trim_label"                       : "Tangent: Final Cut Pro Trim Controls",
+        "finalcutpro_tangent_view_label"                       : "Tangent: Final Cut Pro View Controls",
         "video"                                                : "Video",
         "addColorBoardEffect"                                  : "Add Color Board Effect",
         "addColorWheelsEffect"                                 : "Add Color Wheels Effect",
@@ -1150,56 +1149,71 @@
         "finalcutpro_fullscreen_dockicon_label"                : "Full Screen Dock Icon Manager",
         "disableAllOverlays"                                   : "Disable All Overlays",
         "cpToggleAllViewerOverlays_title"                      : "Toggle All Viewer Overlays",
-        "folder"											   : "Folder",
-        "tag"										           : "Tag",
-        "audio"												   : "Audio",
-        "stills"										       : "Stills",
-        "watchFolderAddFinderTag"						       : "If you want to add a Finder Tag to any %{type} Files that are added to this Watch Folder please enter it below, or press OK to skip:",
-        "trim"												   : "Trim",
-        "blade"											       : "Blade",
-        "joinClips"										       : "Join Clips",
-        "start"												   : "Start",
-        "end"												   : "End",
-        "trimToPlayhead"								       : "Trim To Playhead",
-        "extendEdit"										   : "Extend Edit",
-        "alignAudioToVideo"							           : "Align Audio to Video",
-        "nudge"												   : "Nudge",
-        "left"												   : "Left",
-        "right"												   : "Right",
-		"reverse"											   : "Reverse",
-		"goTo"								                   : "Go to",
-		"edit"										           : "Edit",
-		"frame"												   : "Frame",
-		"marker"											   : "Marker",
-		"keyframe"										       : "Keyframe",
-		"resetAllControls"									   : "Reset All Controls",
-		"resetCurrentEffectPane"							   : "Reset Current Effect Pane",
-		"resetSelectedControl"    						       : "Reset Selected Control",
-		"pause"	 											   : "Pause",
-		"zoomToFit"										       : "Zoom to Fit",
-		"zoomToSamples"										   : "Zoom to Samples",
-		"timelineHistory"									   : "Timeline History",
-		"back"									 			   : "Back",
-		"forward"											   : "Forward",
-		"histogram"								               : "Histogram",
-		"vectorscope"									       : "Vectorscope",
-		"videoWaveform"									       : "Video Waveform",
-		"toggleVideoScopesInViewer"							   : "Toggle Video Scopes in Viewer",
-		"toggleVideoScopesInEventViewer"				       : "Toggle Video Scopes in Event Viewer",
-		"undo"												   : "Undo",
-		"redo"											       : "Redo",
-		"delete"										       : "Delete",
-		"breakApartClipItems"                                  : "Break Apart Clip Items",
-		"detachAudio"										   : "Detach Audio",
-		"components"								           : "Components",
-		"expandAudio"										   : "Expand Audio",
-		"selectLeftAudioEdge"								   : "Select Left Audio Edge",
-		"selectRightAudioEdge"	 							   : "Select Right Audio Edge",
-		"selectLeftEdge"					                   : "Select Left Edge",
-		"selectRightEdge"					                   : "Select Right Edge",
-		"clip"										           : "Clip",
-		"new" 									               : "New",
-		"compoundClip"										   : "Compound Clip",
-		"viewerOverlay"										   : "Viewer Overlay",
+        "folder"                                               : "Folder",
+        "tag"                                                  : "Tag",
+        "audio"                                                : "Audio",
+        "stills"                                               : "Stills",
+        "watchFolderAddFinderTag"                              : "If you want to add a Finder Tag to any %{type} Files that are added to this Watch Folder please enter it below, or press OK to skip:",
+        "trim"                                                 : "Trim",
+        "blade"                                                : "Blade",
+        "joinClips"                                            : "Join Clips",
+        "start"                                                : "Start",
+        "end"                                                  : "End",
+        "trimToPlayhead"                                       : "Trim To Playhead",
+        "extendEdit"                                           : "Extend Edit",
+        "alignAudioToVideo"                                    : "Align Audio to Video",
+        "nudge"                                                : "Nudge",
+        "left"                                                 : "Left",
+        "right"                                                : "Right",
+        "reverse"                                              : "Reverse",
+        "goTo"                                                 : "Go to",
+        "edit"                                                 : "Edit",
+        "frame"                                                : "Frame",
+        "marker"                                               : "Marker",
+        "keyframe"                                             : "Keyframe",
+        "resetAllControls"                                     : "Reset All Controls",
+        "resetCurrentEffectPane"                               : "Reset Current Effect Pane",
+        "resetSelectedControl"                                 : "Reset Selected Control",
+        "pause"                                                : "Pause",
+        "zoomToFit"                                            : "Zoom to Fit",
+        "zoomToSamples"                                        : "Zoom to Samples",
+        "timelineHistory"                                      : "Timeline History",
+        "back"                                                 : "Back",
+        "forward"                                              : "Forward",
+        "histogram"                                            : "Histogram",
+        "vectorscope"                                          : "Vectorscope",
+        "videoWaveform"                                        : "Video Waveform",
+        "toggleVideoScopesInViewer"                            : "Toggle Video Scopes in Viewer",
+        "toggleVideoScopesInEventViewer"                       : "Toggle Video Scopes in Event Viewer",
+        "undo"                                                 : "Undo",
+        "redo"                                                 : "Redo",
+        "delete"                                               : "Delete",
+        "breakApartClipItems"                                  : "Break Apart Clip Items",
+        "detachAudio"                                          : "Detach Audio",
+        "components"                                           : "Components",
+        "expandAudio"                                          : "Expand Audio",
+        "selectLeftAudioEdge"                                  : "Select Left Audio Edge",
+        "selectRightAudioEdge"                                 : "Select Right Audio Edge",
+        "selectLeftEdge"                                       : "Select Left Edge",
+        "selectRightEdge"                                      : "Select Right Edge",
+        "clip"                                                 : "Clip",
+        "new"                                                  : "New",
+        "compoundClip"                                         : "Compound Clip",
+        "viewerOverlay"                                        : "Viewer Overlay",
+        "fcpMediaWatchFolderTitle"                             : "FCP Media Watch Folder",
+        "fcpMediaFolderIncomingSubTitle"                       : {
+            "zero" : "'%{file}' is incoming...",
+            "one"  : "'%{file}' and one other are incoming...",
+            "other": "'%{file}' and %{count} others are incoming..."
+        },
+        "fcpMediaFolderReadySubTitle"                          : {
+            "zero" : "'%{file}' is ready to import.",
+            "one"  : "'%{file}' and one other are ready to import.",
+            "other": "'%{file}' and %{count} others are ready to import."
+        },
+        "fcpMediaFolderSkip"              : "Skip",
+        "fcpMediaFolderImport"            : "Import",
+        "fcpMediaFolderImportAll"         : "Import All",
+        "fcpMediaFolderImportIndividually": "Import Individually"
     }
 }
