--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -518,7 +518,6 @@
         "feedbackError": "An error occurred trying to communicate with the CommandPost servers.\n\nUnfortunately your feedback was not submitted.\n\nPlease try again.",
         "feedbackSuccess": "Your feedback was submitted successfully.\n\nThank you!",
         "fileCouldNotBeRead": "The selected file could not be read.",
-        "finalCutPro": "Final Cut Pro",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -531,6 +530,7 @@
         "finalcutpro_export_batch_label": "Batch Export",
         "finalcutpro_export_batch_manager_label": "Manager: Batch Export",
         "finalcutpro_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
+        "finalcutpro_fullscreen_disableesc_label": "Disable ESC Key when Final Cut Pro is Fullscreen",
         "finalcutpro_fullscreen_dockicon_label": "Full Screen Dock Icon Manager",
         "finalcutpro_fullscreen_shortcuts_label": "Fullscreen Shortcuts",
         "finalCutPro_group": "Final Cut Pro",
@@ -580,6 +580,7 @@
         "finalcutpro_preferences_app_label": "Preferences: Panel",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
+        "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
         "finalcutpro_sharing_xml_label": "XML Sharing",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -590,6 +591,7 @@
         "finalcutpro_tangent_manager_label": "Manager: Tangent",
         "finalcutpro_tangent_new_label": "Tangent: Final Cut Pro New Controls",
         "finalcutpro_tangent_open_label": "Tangent: Open Final Cut Pro",
+        "finalcutpro_tangent_overlay_label": "Tangent: Viewer Overlay",
         "finalcutpro_tangent_pasteboard_label": "Tangent: Final Cut Pro Pasteboard Buffer",
         "finalcutpro_tangent_playback_label": "Tangent: Playback",
         "finalcutpro_tangent_timeline_label": "Tangent: Final Cut Pro Timeline Controls",
@@ -633,6 +635,7 @@
         "finalcutpro_watchers_preferences_label": "Watchers: Preferences",
         "finalcutpro_watchfolders_panels_fcpxml_label": "Watch Folders: XML",
         "finalcutpro_watchfolders_panels_media_label": "Watch Folders: Media",
+        "finalCutPro": "Final Cut Pro",
         "finalCutProLanguage": "Final Cut Pro Language",
         "finalCutProNotRunning": "Opps! Final Cut Pro is not currently running.\n\nThis notification will be reinstated.",
         "finalCutProPanelLabel": "Final Cut Pro",
@@ -708,6 +711,7 @@
         "hue": "Hue",
         "hue4": "HUE",
         "icon": "Icon",
+        "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
         "ignoreInsertedCameraCards": "Ignore Inserted Camera Cards",
         "ignoreMissingEffects": "Ignore Missing & Offline Files Warning",
         "ignoreProxies": "Ignore Proxies Warning",
