--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -993,10 +993,8 @@
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
         "scanFinalCutPro": "Scan Final Cut Pro",
-        "scanFinalCutProDone": "Final Cut Pro was scanned successfully.",
-        "scanFinalCutProSetupOne": "CommandPost needs to scan Final Cut Pro for Plugins, Motion Templates and Fonts.",
-        "scanFinalCutProSetupTwo": "Depending on how many things you have installed, this can take several minutes.",
-        "scanFinalCutProWarning": "Depending on how many Effects, Transitions, Generators, and Titles you have installed this might take quite a few seconds.\n\nPlease do not use your mouse or keyboard until you're notified that this process is complete.",
+        "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
+        "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
         "searchSubtext": "Search Subtext",
