--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -177,6 +177,7 @@
         "core_helpandsupport_credits_label": "Help & Support: Credits",
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
         "core_helpandsupport_donate_label": "Help & Support: Donate",
+        "core_helpandsupport_errorlog_label": "Help & Support: Error Log",
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
