--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -23,6 +23,7 @@
         "adminTools": "Administrator",
         "advanced": "Advanced",
         "advancedFeatures": "Advanced Features",
+        "advancedFeaturesWarning": "The below preferences make changes to the internals of Final Cut Pro and therefore require your Administrators Password.<br /><br />Please use at your own risk.",
         "advancedPanelLabel": "Advanced",
         "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
@@ -594,6 +595,7 @@
         "finalcutpro_pasteboard_shared_label": "Shared Pasteboard",
         "finalcutpro_preferences_app_label": "Preferences: Panel",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
+        "finalcutpro_preferences_general": "Preferences: General",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
@@ -1146,7 +1148,7 @@
         "touchbarPanelTooltip": "Touch Bar Preferences",
         "touchBarReset": "Reset All Touch Bar Items",
         "touchBarResetConfirmation": "This will reset all modified Touch Bar items to the default values.",
-        "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon. You can then tap this icon to toggle through the different Touch Bar groups.",
+        "touchBarSetupTip": "Make sure \"App Controls with Control Strip\" is selected within the \"Touch Bar shows\" Keyboard System Preferences to see the CommandPost icon.<br />You can then tap this icon to toggle through the different Touch Bar groups.",
         "touchBarWidget": "Touch Bar Widget",
         "transition_group": "Transition",
         "transmitMMC": "Transmit MMC",
