--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -595,7 +595,7 @@
         "finalcutpro_pasteboard_shared_label": "Shared Pasteboard",
         "finalcutpro_preferences_app_label": "Preferences: Panel",
         "finalcutpro_preferences_clearcache_label": "Preferences: Clear Cache",
-        "finalcutpro_preferences_general": "Preferences: General",
+        "finalcutpro_preferences_general_label": "Preferences: General",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
@@ -1115,7 +1115,7 @@
         "tangentPanelLabel": "Tangent",
         "tangentPanelSupport": "Tangent Panel Support",
         "tangentPanelTooltip": "Tangent Preferences",
-        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Arc</strong>, <strong>Element</strong>, <strong>Wave</strong> & <strong>Wave2</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad</strong> & <strong>Android</strong> app, as well as any future panels that Tangent releases.",
+        "tangentPreferencesInfo": "CommandPost offers native support of the entire range of Tangent's panels, including the <strong>Element</strong>, <strong>Wave</strong> & <strong>Wave2</strong>, <strong>Ripple</strong>, the <strong>Element-Vs iPad</strong> & <strong>Android</strong> app, as well as any future panels that Tangent releases.",
         "temperature": "Temperature",
         "temperature4": "TEMP",
         "ten": "10",
